--- a/app/src/main/res/layout/item_day_card.xml
+++ b/app/src/main/res/layout/item_day_card.xml
@@ -5,6 +5,7 @@
     android:id="@+id/dayCardView"
     android:layout_width="250dp"
     android:layout_height="wrap_content"
+    android:padding="20dp"
     android:layout_marginHorizontal="16dp"
     android:layout_marginVertical="8dp"
     android:layout_gravity="center"
