--- a/app/src/main/res/layout/activity_teacher_info.xml
+++ b/app/src/main/res/layout/activity_teacher_info.xml
@@ -163,10 +163,11 @@
                     app:layout_constraintEnd_toEndOf="parent" />
 
                 <LinearLayout
-                    android:layout_width="458dp"
-                    android:layout_height="904dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     app:layout_constraintTop_toBottomOf="@id/Divider"
-                    tools:ignore="MissingConstraints">
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent">
 
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/teacherRecyclerView"
