--- a/app/src/main/res/layout/teacher_card.xml
+++ b/app/src/main/res/layout/teacher_card.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <LinearLayout
         android:layout_width="match_parent"
@@ -39,6 +39,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+
                 android:gravity="start"
                 android:layout_marginLeft="5dp"
                 android:orientation="vertical">
@@ -49,10 +50,10 @@
                     android:id="@+id/teacher_nameText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Anindita"
+                    android:text="Name"
                     android:textColor="#006A00"
-                    android:textSize="18sp"
-                    android:textStyle="bold" />
+                    android:textSize="12sp"
+                     />
 
 
                 <LinearLayout
@@ -68,8 +69,8 @@
                         android:id="@+id/teacher_acronym"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="5dp"
-                        android:text="59"
+
+                        android:text="acronym"
                         android:textSize="18sp"
                         android:textStyle="bold"
                         android:textColor="#006A00" />
@@ -87,10 +88,10 @@
                         android:id="@+id/teacher_email"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="5dp"
-                        android:text="B"
-                        android:textSize="18sp"
-                        android:textStyle="bold"
+
+                        android:text="Email"
+                        android:textSize="12sp"
+
                         android:textColor="#006A00" />
                 </LinearLayout>
             </LinearLayout>
