--- a/app/src/main/res/layout/activity_student_home_page.xml
+++ b/app/src/main/res/layout/activity_student_home_page.xml
@@ -99,6 +99,7 @@
 
                 android:paddingTop="10dp"
                 android:layout_width="match_parent"
+
                 android:layout_height="wrap_content"
                 android:background="@color/Layout_Background"
                 tools:context=".Guest_HomePage">
@@ -258,9 +259,10 @@
 
                         <ImageView
                             android:id="@+id/statusIcon"
-                            android:layout_width="65dp"
-                            android:layout_height="65dp"
+                            android:layout_width="45dp"
+                            android:layout_height="45dp"
                             android:layout_gravity="center_vertical"
+                            android:layout_marginEnd="5dp"
                             android:src="@drawable/student_icon"
                             android:contentDescription="Status Icon" />
 
@@ -269,7 +271,7 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:gravity="start"
-                            android:layout_marginLeft="5dp"
+                            android:layout_marginStart="5dp"
                             android:orientation="vertical">
 
 
@@ -347,7 +349,7 @@
                                 android:layout_height="wrap_content"
                                 android:text="Today"
                                 android:textColor="#006A00"
-                                android:textSize="16sp"
+                                android:textSize="14sp"
                                 android:textStyle="bold"
                                 android:layout_marginBottom="4dp" />
 
@@ -355,16 +357,16 @@
                                 android:id="@+id/st_class"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="NO Class today"
+                                android:text="Class Loading..."
                                 android:textColor="#006A00"
-                                android:textSize="16sp" />
+                                android:textSize="13sp" />
                             <TextView
                                 android:id="@+id/st_task"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="NO Task today"
+                                android:text="Task Loading..."
                                 android:textColor="#006A00"
-                                android:textSize="16sp" />
+                                android:textSize="13sp" />
                         </LinearLayout>
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
@@ -715,7 +717,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
-                    android:layout_marginHorizontal="5dp"
+                    android:layout_marginHorizontal="12dp"
                     app:cardElevation="2dp"
                     app:cardCornerRadius="8dp"
                     app:layout_constraintTop_toBottomOf="@id/Divider4"
@@ -725,6 +727,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
+
 
 
                         android:padding="8dp">
@@ -755,6 +758,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
                     android:orientation="horizontal"
+                    android:layout_marginHorizontal="10dp"
                     android:weightSum="2"
                     app:layout_constraintTop_toBottomOf="@id/currentClassCard">
 
