--- a/app/src/main/res/layout/activity_teacher_homepage.xml
+++ b/app/src/main/res/layout/activity_teacher_homepage.xml
@@ -246,14 +246,28 @@
                         android:orientation="horizontal"
                         android:paddingStart="8dp"
                         android:paddingEnd="8dp">
-
-                        <ImageView
-                            android:id="@+id/statusIcon"
+                        <androidx.cardview.widget.CardView
+                            android:id="@+id/profilePictureCard"
                             android:layout_width="65dp"
                             android:layout_height="65dp"
-                            android:layout_gravity="center_vertical"
-                            android:src="@drawable/teacher_info"
-                            android:contentDescription="Status Icon" />
+                            android:layout_marginTop="0dp"
+                            android:layout_marginBottom="0dp"
+                            android:layout_marginEnd="4dp"
+                            app:cardCornerRadius="60dp"
+                            app:cardElevation="4dp"
+                            app:layout_constraintTop_toBottomOf="@id/topCardView"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent">
+
+                            <ImageView
+                                android:id="@+id/statusIcon"
+                                android:layout_width="65dp"
+                                android:layout_height="65dp"
+                                android:layout_gravity="center_vertical"
+                                android:src="@drawable/teacher_info"
+                                android:contentDescription="Status Icon" />
+
+                        </androidx.cardview.widget.CardView>
 
                         <LinearLayout
                             android:layout_width="0dp"
@@ -267,7 +281,7 @@
                                 android:id="@+id/tv_teacher_name"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="Dipta Paul "
+                                android:text="Teacher "
                                 android:textStyle="bold"
                                 android:textColor="#006A00"
                                 android:textSize="18sp" />
@@ -276,7 +290,7 @@
                                 android:id="@+id/tv_designation"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="Lecturer"
+                                android:text="Designation"
                                 android:textColor="#006A00"
                                 android:textSize="16sp"
                                />
@@ -284,7 +298,7 @@
                                 android:id="@+id/tv_acronym"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="DCP"
+                                android:text="Acronym"
                                 android:textColor="#006A00"
                                 android:textSize="16sp"
                                 />
@@ -293,7 +307,7 @@
                                 android:id="@+id/tv_email"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="diptapaul@gmail.com "
+                                android:text="email@gmail.com "
                                 android:textColor="#006A00"
                                 android:textSize="15sp" />
                         </LinearLayout>
@@ -322,13 +336,7 @@
                                 android:text="NO Class today"
                                 android:textColor="#006A00"
                                 android:textSize="16sp" />
-                            <TextView
-                                android:id="@+id/t_task"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="NO Task today"
-                                android:textColor="#006A00"
-                                android:textSize="16sp" />
+
                         </LinearLayout>
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
