--- a/app/src/main/res/layout/activity_teacher_routine.xml
+++ b/app/src/main/res/layout/activity_teacher_routine.xml
@@ -150,6 +150,22 @@
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
                                 android:padding="10dp"/>
+                            <ProgressBar
+                                android:id="@+id/loadingSpinner"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:visibility="gone" />
+                            <ImageButton
+                                android:id="@+id/reload"
+                                android:layout_width="48dp"
+                                android:layout_height="48dp"
+                                android:layout_alignParentStart="true"
+                                android:layout_alignParentTop="true"
+                                android:backgroundTint="@color/white"
+                                android:contentDescription="@string/previous"
+                                android:src="@drawable/reload"
+                                android:scaleType="centerInside" />
                         </LinearLayout>
                     </androidx.cardview.widget.CardView>
                 </LinearLayout>
